fix auth styles for dark mode

--- a/src/globals.css
+++ b/src/globals.css
@@ -158,7 +158,7 @@
   .button-darkMode {
     color: #fff;
   }
-  .socialIcon_text-darkMode {
+  .auth_text-darkMode {
     color: black;
   }
 }
